完成进度条点击和登录页

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 
-<body class="font-sans">
+<body class="font-Barlow">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
