--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         document.documentElement.classList.toggle('dark', true)
     })()
   </script>
-  <style>
-    body {
+  <!-- <style>
+    /* body {
       background-color: #222222;
-    }
-  </style>
+    } */
+  </style> -->
 </head>
 
 <body class="font-Barlow">
